JDK-8008081 : Print outs do not have matching arguments
  • Type: Bug
  • Component: hotspot
  • Sub-Component: runtime
  • Priority: P3
  • Status: Closed
  • Resolution: Fixed
  • Submitted: 2013-02-13
  • Updated: 2014-06-26
  • Resolved: 2013-02-27
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 7 JDK 8 Other
7u40Fixed 8Fixed hs24Fixed
Description
There is a handful of uses of print functions where the actual arguments do not match the format string, this should be fixed.
Comments
One of the mismatches can be found in c1_FrameMap.cpp in FrameMap::print_frame_layout(). This function is not actually used anywhere and will be removed. This does bring up the question if there are other dead functions which can and should be removed.
26-02-2013