8008081: Print outs do not have matching arguments

Corrected formatted prints to have matching arguments, removed dead print_frame_layout function

Reviewed-by: sla, dholmes